# hs-gip

./: README.md  hs-gip.cabal
src/: Main.hs
