name:                hs-gip
version:             0.1.0.0
synopsis:            Display global IP address
description:         Display global IP address
homepage:            http://github.com/yoshitsugu/hs-gip
license:             BSD3
license-file:        LICENSE
author:              yoshitsugu
maintainer:          example@example.com
copyright:           2015 yoshitsugu
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hs-gip
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text >= 1.2.1.3 && < 1.2.2.0,
                       scotty >= 0.10.2 && < 0.11.0,
                       wai >= 3.0.4 && < 3.1.0,
                       network >= 2.6.2.1 && < 2.6.3.0
